Fixed formatting of contact information in README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Brett Alton <info@brettalton.com>
+Brett Alton <brett.jr.alton@gmail.com>
 http://brettalton.com
 
 This project is for multimedia-centric Ubuntu users.
